# mdv

./: .gitignore  AGENTS.md  PRD.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  nuxt.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/desktop/src/: App.tsx  app.test.ts  app.vue  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: ai.rs  assets.rs  document.rs  preferences.rs
apps/desktop/src/components/: AiPanel.tsx  AiPanel.vue  AiSettingsSection.test.ts  AiSettingsSection.tsx  AiSettingsSection.vue  BrandMark.vue  CodeBlock.tsx  EmptyState.tsx  EmptyState.vue  ErrorState.tsx  ErrorState.vue  FileDropOverlay.tsx  FileDropOverlay.vue  FindPanel.tsx  FindPanel.vue  ImageRenderer.tsx  MarkdownEditor.vue  MarkdownHtml.vue  MarkdownSourceEditor.vue  MarkdownView.test.ts  MarkdownView.tsx  MarkdownView.vue  MermaidBlock.tsx  OutlinePanel.tsx  OutlinePanel.vue  SettingsPanel.tsx  SettingsPanel.vue  TopBar.test.ts  TopBar.tsx  TopBar.vue
apps/desktop/src/composables/: useAppLifecycle.ts  useTauriRuntime.ts  useThemeSync.ts
apps/desktop/src/lib/: errors.ts  markdown.ts  path.ts  preferences.ts  readerSettings.ts  shiki.ts  text.ts  theme.ts  types.ts
apps/desktop/src/plugins/: readerSettings.tsx
apps/desktop/src/stores/: app.ts  appState.ts
apps/desktop/src/styles/: app.css  markdown.css
examples/: lecture.md
scripts/: bump-version.mjs
(+7 files in other folders)
